generated/gramaticaParser.py
# Generado desde gramatica.g4 por ANTLR 4.13.1
# codificacion: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "'TRUE'", "'FALSE'", "'AND'", 
                     "'OR'", "'NOT'", "'('", "')'", "';'", "'='" ]

    symbolicNames = [ "<INVALID>", "T_PRINT", "T_TRUE", "T_FALSE", "T_AND", 
                      "T_OR", "T_NOT", "T_LPAREN", "T_RPAREN", "T_SEMICOLON", 
                      "T_ASSIGN", "ID", "NUMBER", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_boolExpr = 3
    RULE_boolTerm = 4
    RULE_printStmt = 5

    ruleNames =  [ "program", "statement", "assignment", "boolExpr", "boolTerm", 
                   "printStmt" ]

    EOF = Token.EOF
    T_PRINT=1
    T_TRUE=2
    T_FALSE=3
    T_AND=4
    T_OR=5
    T_NOT=6
    T_LPAREN=7
    T_RPAREN=8
    T_SEMICOLON=9
    T_ASSIGN=10
    ID=11
    NUMBER=12
    WS=13
    COMMENT=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = gramaticaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Tipo de token
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.statement()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==11):
                    break

            self.state = 17
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(gramaticaParser.AssignmentContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(gramaticaParser.PrintStmtContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = gramaticaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 21
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.assignment()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.printStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def T_ASSIGN(self):
            return self.getToken(gramaticaParser.T_ASSIGN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(gramaticaParser.BoolExprContext,0)


        def T_SEMICOLON(self):
            return self.getToken(gramaticaParser.T_SEMICOLON, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = gramaticaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(gramaticaParser.ID)
            self.state = 24
            self.match(gramaticaParser.T_ASSIGN)
            self.state = 25
            self.boolExpr()
            self.state = 26
            self.match(gramaticaParser.T_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.BoolTermContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.BoolTermContext,i)


        def T_AND(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_AND)
            else:
                return self.getToken(gramaticaParser.T_AND, i)

        def T_OR(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.T_OR)
            else:
                return self.getToken(gramaticaParser.T_OR, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_boolExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpr" ):
                listener.enterBoolExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExpr" ):
                listener.exitBoolExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self)
            else:
                return visitor.visitChildren(self)




    def boolExpr(self):

        localctx = gramaticaParser.BoolExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_boolExpr)
        self._la = 0 # Tipo de token
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.boolTerm()
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4 or _la==5:
                self.state = 29
                _la = self._input.LA(1)
                if not(_la==4 or _la==5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 30
                self.boolTerm()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolTermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def T_TRUE(self):
            return self.getToken(gramaticaParser.T_TRUE, 0)

        def T_FALSE(self):
            return self.getToken(gramaticaParser.T_FALSE, 0)

        def NUMBER(self):
            return self.getToken(gramaticaParser.NUMBER, 0)

        def T_LPAREN(self):
            return self.getToken(gramaticaParser.T_LPAREN, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(gramaticaParser.BoolExprContext,0)


        def T_RPAREN(self):
            return self.getToken(gramaticaParser.T_RPAREN, 0)

        def T_NOT(self):
            return self.getToken(gramaticaParser.T_NOT, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_boolTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolTerm" ):
                listener.enterBoolTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolTerm" ):
                listener.exitBoolTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolTerm" ):
                return visitor.visitBoolTerm(self)
            else:
                return visitor.visitChildren(self)




    def boolTerm(self):

        localctx = gramaticaParser.BoolTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_boolTerm)
        self._la = 0 # Tipo de token
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 36
                self.match(gramaticaParser.T_NOT)


            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 39
                self.match(gramaticaParser.ID)
                pass
            elif token in [2]:
                self.state = 40
                self.match(gramaticaParser.T_TRUE)
                pass
            elif token in [3]:
                self.state = 41
                self.match(gramaticaParser.T_FALSE)
                pass
            elif token in [12]:
                self.state = 42
                self.match(gramaticaParser.NUMBER)
                pass
            elif token in [7]:
                self.state = 43
                self.match(gramaticaParser.T_LPAREN)
                self.state = 44
                self.boolExpr()
                self.state = 45
                self.match(gramaticaParser.T_RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_PRINT(self):
            return self.getToken(gramaticaParser.T_PRINT, 0)

        def T_LPAREN(self):
            return self.getToken(gramaticaParser.T_LPAREN, 0)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def T_RPAREN(self):
            return self.getToken(gramaticaParser.T_RPAREN, 0)

        def T_SEMICOLON(self):
            return self.getToken(gramaticaParser.T_SEMICOLON, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = gramaticaParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(gramaticaParser.T_PRINT)
            self.state = 50
            self.match(gramaticaParser.T_LPAREN)
            self.state = 51
            self.match(gramaticaParser.ID)
            self.state = 52
            self.match(gramaticaParser.T_RPAREN)
            self.state = 53
            self.match(gramaticaParser.T_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





